--- a/testapp/templates/home.html
+++ b/testapp/templates/home.html
@@ -6,12 +6,17 @@
 <p>확장 !</p>
 
  <!-- views.py 넘어온 데이터를 보여주기 -->
+ 
  {% for blog in blogs.all %}
     <div class="container">
         <h1>{{ blog.title }}</h1>
-        <p>{{ blog.pub_date }}</p>
-        <p>{{ blog.body }}</p>
+        <p>{{ blog.pub_date|date:"Y/m/d" }}</p>
+        <p>{{ blog.summary }}<a href="{% url 'detail' blog.id %}">More !</a></p>
     </div>
 {% endfor %}
 
 {% endblock %}
+
+<!--
+ctrl + space
+-->
