create a writing function for a posting

--- a/testapp/templates/base.html
+++ b/testapp/templates/base.html
@@ -14,9 +14,9 @@
 		</button>
 	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	    <div class="navbar-nav ml-auto">
-	      <a class="nav-item nav-link active" href="#">Home</a>
+	      <a class="nav-item nav-link active" href="home">Home</a>
         <a class="nav-item nav-link" href="#">Blog</a>
-        <a class="nav-item nav-link" href="#">수료증</a>
+        <a class="nav-item nav-link" href="new">글쓰기</a>
 			</div>
     </div>
 	</div>
