--- a/testapp/templates/home.html
+++ b/testapp/templates/home.html
@@ -7,16 +7,44 @@
 
  <!-- views.py 넘어온 데이터를 보여주기 -->
  
- {% for blog in blogs.all %}
-    <div class="container">
-        <h1>{{ blog.title }}</h1>
-        <p>{{ blog.pub_date|date:"Y/m/d" }}</p>
-        <p>{{ blog.summary }}<a href="{% url 'detail' blog.id %}">More !</a></p>
-    </div>
-{% endfor %}
+{% for blog in posts %}
+  <br>
+  <div class="card">
+      <div class="card-body">
+          <h5 class="card-title">{{blog.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
+          <p class="card-text">{{blog.summary}}</p>
+          <a href="{%url 'detail' blog.id%}" class="card-link">...more</a>
+      </div>
+  </div>
+  {%endfor%}
+
+{%if posts.has_previous%}
+<a href="?page=1">First</a>
+<a href="?page={{posts.previous_page_number}}">Previous</a>
+{%endif%}
+
+<!--
+    if posts.has_previous 현재 보여지는 페이지는 posts,
+    이전 페이지가 존재하는지 체크하는 부분
+    만약 현재 페이지가 1이라면 if 구문은 실행되지 않음
+    아래 if posts.has_next 같은 구조
+-->
+
+<span>{{posts.number}}</span>
+<span>of</span>
+<span>{{posts.paginator.num_pages}}</span>
+
+<!--
+    현재 of 전체 페이지 수 
+-->
+
+{%if posts.has_next%}
+<a href="?page={{posts.next_page_number}}">Next</a>
+<a href="?page={{posts.paginator.num_pages}}">Last</a>
+{%endif%}
 
 {% endblock %}
-
 <!--
 ctrl + space
 -->
