--- a/testapp/templates/home.html
+++ b/testapp/templates/home.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
-
 {% block content %}
 {% load static %}
+
+
+<head>
+<title>Home</title>
+</head>
+
+<h1> HOME !</h1>
+
 <img style="width:300px; max-width:300px; height:auto;" src= {% static 'img/rat.jpg' %} alt="rat"/>
-<p>확장 !</p>
 
  <!-- views.py 넘어온 데이터를 보여주기 -->
  
@@ -11,10 +17,10 @@
   <br>
   <div class="card">
       <div class="card-body">
-          <h5 class="card-title">{{blog.title}}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
+          <a href="{%url 'detail' blog.id%}"><h5 class="card-title">{{blog.title}}</h5></a>
           <p class="card-text">{{blog.summary}}</p>
-          <a href="{%url 'detail' blog.id%}" class="card-link">...more</a>
+          <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
+          <a href="{%url 'detail' blog.id%}" class="card-link">more</a>
       </div>
   </div>
   {%endfor%}
