--- a/testapp/templates/home.html
+++ b/testapp/templates/home.html
@@ -9,6 +9,9 @@
 
 <h1> HOME !</h1>
 
+<a href="{% url 'new' %}" >
+	  <input class="btn btn-dark" type="submit" value="create!"></a>
+
 <img style="width:300px; max-width:300px; height:auto;" src= {% static 'img/rat.jpg' %} alt="rat"/>
 
  <!-- views.py 넘어온 데이터를 보여주기 -->
